--- a/server/scss-files/new-tweet.scss
+++ b/server/scss-files/new-tweet.scss
@@ -1,4 +1,5 @@
 .new-tweet {
+  visibility: hidden;
   position: relative;
   margin: 1em 2em 0 2em; //top 2
   padding: 5px 10px 10px 10px;
