--- a/server/scss-files/users.scss
+++ b/server/scss-files/users.scss
@@ -1,4 +1,6 @@
 .users {
+  visibility: visible;
+  position: absolute;
   display: flex;
   flex-direction: column;
   margin: 1em 1em 0 1em;
